@@ -1,3 +1,9 @@
+2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc,
+	  src/z80/gen.c:
+	  Use information from generalized constant propagation analysis in z80 code generation.
+
 2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCBBlock.c,
